[package]
name = "dxgcap2"
version = "0.1.2"
authors = ["jojo <jo@jo.zone>", "TommyGymer <github@tgymer.uk>"]
description = "Screen capturing with DXGI for Windows in Rust"
repository = "https://github.com/TommyGymer/dxgcap-rs"
documentation = "https://docs.rs/dxgcap/*/x86_64-pc-windows-msvc/dxgcap/"
readme = "README.md"
keywords = ["Windows", "DXGI", "screen", "record", "capture"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
winapi = { version = "0.3.9", features = ["d3d11", "d3dcommon", "dxgi", "dxgi1_2", "dxgitype", "ntdef", "unknwnbase", "windef", "winerror", "winuser"] }
wio = "0.2.2"

# TODO: optional
rayon = "1.6"

[dev-dependencies]
serial_test = "2.0.0"